@@ -1,3 +1,4 @@
+* BUG#9035 Remove checkbox for always ignoring warnings
 * FEA#8271 Add support of expand attribute on group tag
 * FEA#8785 Change title to Coog in the Sao browser
 * FEA#7941 Add keyword attribute to button tag
